createEps: eps CRUD OK
