# w2m-ms-spaceships-api-infrastructure/src/main/java/es/w2m/infrastructure/jpa/SpaceshipRepositoryAdapterJPA.java
@@ -2,6 +2,8 @@ package es.w2m.infrastructure.jpa;
 
 import es.w2m.domain.ISpaceshipRepositoryPort;
 import es.w2m.domain.PageableDomain;
+import es.w2m.domain.SpaceshipDomain;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,5 +24,28 @@ public class SpaceshipRepositoryAdapterJPA implements ISpaceshipRepositoryPort {
     public PageableDomain searchSpaceships(String name, Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
         return mapper.toPageableDomain(repository.findByNameContainingIgnoreCase(name, pageable));
+    }
+
+    @Override
+    public SpaceshipDomain searchSpaceshipById(Long id) {
+        return mapper.toDomain(repository.findById(id)
+                .orElseThrow(() ->
+                        new EntityNotFoundException("No existe nave con id: " + id)));
+    }
+
+    @Override
+    public SpaceshipDomain createSpaceship(SpaceshipDomain newSpaceship) {
+        SpaceshipEntity spaceship = mapper.toEntity(newSpaceship);
+        return mapper.toDomain(repository.save(spaceship));
+    }
+
+    @Override
+    public SpaceshipDomain updateSpaceship(SpaceshipDomain spaceship) {
+        return mapper.toDomain(repository.save(mapper.toEntity(spaceship)));
+    }
+
+    @Override
+    public void deleteSpaceshipById(Long spaceshipId) {
+        repository.deleteById(spaceshipId);
     }
 }
